--- a/templates/commons/search.html
+++ b/templates/commons/search.html
@@ -15,7 +15,7 @@
                 </div>
             </div>
             <div>
-                <div class="p-4 mt-4" style="background-color: #FFA8A8; border-radius: 6px;">
+                <div class="pink-box p-4 mt-4">
                     <div class="row">
                         <div class="d-flex justify-content-between">
                             <span class="text-style-ro-18b">Filters:</span>
@@ -51,7 +51,7 @@
                 <span class="px-3 py-3" style="background-color: #FFA8A8; border-top-right-radius: 20px; border-top-left-radius: 20px;">SEARCH HERE</span>
                 
             </div>
-            <div class="questions-box mt-3 pt-3 ps-3 pe-3" style="width: 100%; border: 1px solid #FFA8A8;">
+            <div class="light-grey-box mt-3 pt-3 ps-3 pe-3" style="width: 100%; border: 1px solid #FFA8A8;">
                 <div class="row ms-2 me-2">
                     <div class="d-flex justify-content-between">
                         <div class="col-lg-2 text-style-rso-24" style="font-size: 22px;">POSITION</div>
@@ -64,7 +64,7 @@
                     </div>
                 </div>
                 {% for student in students %}
-                <div class="row mb-3 ms-2 me-2 mt-3" style="background-color: white;">
+                <div class="row mb-3 ms-2 me-2 mt-3" style="background-color: white; border-radius: 6px;">
                     <div class="d-flex align-items-center py-2">
                         <div class="col-lg-2 text-truncate text-style-ro-18b pe-4">{{student.position}}</div>
                         <div class="col-lg-2 text-center text-style-ro-18b">{{student.specialisation}}</div>
