--- a/templates/commons/payment.html
+++ b/templates/commons/payment.html
@@ -10,15 +10,15 @@
     <div class="col d-flex justify-content-center align-items-center row" style="vertical-align: middle;">
         <div class="col-lg-11 mt-4">
             <div style="width: 100%;">
-                <div class="text-style-profile-big" style="text-align: left;">Your Shopping Cart</div>
-                <div class="questions-box pb-4 mt-3 mb-5 ps-4 pe-4 pt-4" style="width: 100%;">
+                <div class="text-style-rso-40" style="text-align: left;">Your Shopping Cart</div>
+                <div class="light-grey-box pb-4 mt-3 mb-5 ps-4 pe-4 pt-4" style="width: 100%;">
                     <div class="row d-flex" >
                         <div class="col-lg-8">
                             <div style="width: 100%;">
                             {% for order in orders %}
                             <!-- One order -->
                             <div class="row d-flex g-0 me-4 mb-3">
-                                <div class="profile-rectangle d-flex justify-content-between ps-3 py-3" style="width: 100%;">
+                                <div class="white-box d-flex justify-content-between ps-3 py-3" style="width: 100%;">
                                     <div class="col-lg-4">
                                         <div class="col">
                                             <div>
@@ -104,26 +104,26 @@
                                     </div>
                                     <div class="text-style-ro-16b mt-4">Card number</div>
                                     <div class="input-icons">
-                                        <input type="text" class="input-field input-box mt-2" placeholder="0000 0000 0000 0000">
+                                        <input type="text" class="input-field white-input-box mt-2" placeholder="0000 0000 0000 0000" style="height: 48px;">
                                     </div>
                                     <div class="text-style-ro-16b mt-4">Cardholder name</div>
-                                    <input class="input-box mt-2" placeholder="Name Surname">
+                                    <input class="white-input-box mt-2" placeholder="Name Surname" style="height: 48px;">
                                     <div class="row">
                                         <div class="d-flex justify-content-between">
                                             <div class="me-3">
                                                 <div class="text-style-ro-16b mt-4">Expiry date</div>
-                                                <input class="input-box mt-2" placeholder="MM / YYYY">
+                                                <input class="white-input-box mt-2" placeholder="MM / YYYY" style="height: 48px;">
                                             </div>
                                             <div class="ms-3">
                                                 <div class="text-style-ro-16b mt-4">CVV/CVC</div>
-                                                <input class="input-box mt-2" placeholder="xxx">
+                                                <input class="white-input-box mt-2" placeholder="xxx" style="height: 48px;">
                                             </div>
                                         </div>
                                     </div>
                                     <div class="text-style-ro-16b mt-5" style="font-weight: 400;">
                                         We will send you an order details to your email after the successfull payment
                                     </div>
-                                    <button class="button-custom-style mt-5" style="width: 100%;">Checkout</button>
+                                    <button class="orange-button mt-5 mb-4" style="height: 48px;">Checkout</button>
                                 </div>
                             </div>
                         </div>
